--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,15 @@
     "private": true,
     "version": "0.0.1",
     "type": "module",
+    "engines": {
+        "node": ">=18"
+    },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview --port 5173"
+        "start": "serve -s dist -l $PORT",
+        "preview": "vite preview --port 5173",
+        "heroku-postbuild": "npm ci && npm run build"
     },
     "dependencies": {
         "@react-three/drei": "^9.121.5",
@@ -15,6 +20,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.1",
+        "serve": "^14.2.4",
         "three": "^0.166.1",
         "three-mesh-bvh": "^0.8.3"
     },
